--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT=8080
+
+MONGODB_CONNECTION=mongodb+srv://user_curso_node:aesil5wWRF05n2k8@clustercursonodejs.k2hkcxv.mongodb.net/cursonodeDB
+USER=user_curso_node
+PASS=aesil5wWRF05n2k8
